Fixed updating the selected comics during multi-comic scraping [#2082]
 * Changed encoding selections to use a Set instead of a List.